SUBDIRS= 8x8 16x16 22x22 24x24 32x32 48x48 256x256

EXTRA_DIST = kiwix.png kiwix.desktop kiwix.xpm kiwix.xml kiwix.applications

pixmapdir = $(datadir)/pixmaps
pixmap_DATA = kiwix.png kiwix.xpm

Applicationsdir = $(datadir)/applications
Applications_DATA = kiwix.desktop
Mimesdir = $(datadir)/mime/packages
Mimes_DATA = kiwix.xml
Applicationsregistrydir = $(datadir)/application-registry
Applicationsregistry_DATA = kiwix.applications
